test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/promise-nullable.widl
interface X {
    attribute Promise<void>?
        promise;
};
